--- a/Informe Demográfico del Régimen/Estructura Poblacional del Régimen.Rmd
+++ b/Informe Demográfico del Régimen/Estructura Poblacional del Régimen.Rmd
@@ -75,7 +75,7 @@ FC_Activos <- FC_Activos %>%
       )>0,
     Contribuciones23=
       rowSums(
-        FC_Activos[,352:363]>10000
+        FC_Activos[,352:363]>0
       ),
     Activo22 =
       rowSums(
@@ -83,7 +83,7 @@ FC_Activos <- FC_Activos %>%
       )>0,
     Contribuciones22=
       rowSums(
-        FC_Activos[,(352:363)-12]>10000
+        FC_Activos[,(352:363)-12]>0
       ),
     N = (
       Sexo == 
@@ -231,28 +231,6 @@ Graf1
 
 \end{wrapfigure}
 
-```{r}
-temp1 <- length(FC_Activos[1]) + length(FC_Pensinados[1])
-temp2 <- sum(FC_Activos$Activo23)
-temp3 <- sum(FC_Activos$Activo23)/(length(FC_Activos[1]) + length(FC_Pensinados[1]))
-temp4 <- length(FC_Pensinados[1])
-temp5 <- length(FC_Pensinados[1])/(length(FC_Activos[1]) + length(FC_Pensinados[1]))
-```
 
-
-Gracias a al Gráfico 1 es posible observar que para la fecha corte de este análisis el Fondo esta compuesto por un total de `r temp1` de las cuales `r temp2` (`r temp3`%) son personas activas es decir que realizaron una contribución al régimen en los últimos 12 meses, ademas los pensionados son un total de `r temp4` ((`r temp5`%))
-
-
-```{r}
-
-mean(FC_Activos$Activo23)
-
-
-mean(FC_Activos$Contribuciones23)
-mean(FC_Activos$Activo22)
-mean(FC_Activos$Contribuciones22)
-
-```
-
-
+Gracias a al Gráfico 1
 
