--- a/Informe Demográfico del Régimen/Altas y bajas de pensionados.Rmd
+++ b/Informe Demográfico del Régimen/Altas y bajas de pensionados.Rmd
@@ -80,13 +80,15 @@ en estudio, específicamente, la cantidad de entradas de pensionados
 por año y por tipo de pensión (Invalidez, Vejez y Sucesión), durante un 
 periodo que abarca desde el 2001 al 2023. Algunos pensionados no cuentan con la fecha
 de inicio del pago de la pensión, por lo que, no se toman en cuenta para el análisis.
+Además, dado que el fondo no cuenta con la fecha de salida de los pensionados, no se 
+analizarán las bajas.
 
-En el gráfico 1, se muestra el comportamiento de las entradas de pensionados.
+En el gráfico #, se muestra el comportamiento de las entradas de pensionados.
 
 ```{r, warning=FALSE, echo=FALSE}
   ggplot(conteo, aes(x = as.numeric(año), y = cantidad_personas, color = COD_TIPO_PENSION)) +
   geom_line() +
-  labs(title = " Gráfico 1: Entradas de pensionados por año, del Régimen",
+  labs(title = " Gráfico #: Entradas de pensionados por año del Régimen",
        subtitle = "2001-2023",x = " Año de inicio de pago de la pensión",
        y = "Cantidad de personas pensionadas", color = "Tipo de pensión")+
   scale_color_manual(values = c("#2F4F4F", "cadetblue3", "#BCEE68"))+
@@ -96,7 +98,7 @@ En el gráfico 1, se muestra el comportamiento de las entradas de pensionados.
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank()) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos de."))
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C"))
 
 ```
 
