--- a/Informe Demográfico del Régimen/Informe Contexto Demográfico del Régimen.Rmd
+++ b/Informe Demográfico del Régimen/Informe Contexto Demográfico del Régimen.Rmd
@@ -358,9 +358,7 @@ En cuanto a la antigüedad, la media se sitúa en 12.54 años. En el gráfico se
 
 ## Pensionados
 
-Se realiza el análisis de características de la población de pensionados del 
-Régimen, tales como la edad del individuo a la fecha de corte(31/12/2023), sexo
-y antiguedad de la pensión.
+La segunda población de interés es la población de pensionados (beneficiarios) en curso de pago al 31 de diciembre de 2023 de la cual interesa su distribución por edad, sexo, tipo de pensión y antigüedad.
 
 Es importante aclarar que algunos pensionados por vejez no cuentan con fecha de 
 inicio del pago de la pensión. Por lo cual, se asignó a estos la edad promedio
@@ -369,6 +367,7 @@ mujeres es de 64.12467 y para hombres es de 64.27295. Además, como fecha de
 inicio en que rige la pensión, se toma la diferencia entre el nacimiento del individuo 
 y la edad a la que se pensiona en formato año/mes/día.
 
+El siguiente gráfico muestra una distribución de los 411 beneficiarios en curso de pago al 31 de diciembre de 2023, por edad según sexo.
 
 ```{r, message = FALSE, echo=FALSE}
 # se cargan los datos de interés
@@ -414,6 +413,7 @@ ggplot(piramide, aes(x = Edad_intervalo, y = ifelse(SEXO == "M", -Count, Count),
   labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del fondo de pensiones."))
 ```
 
+La distribución por sexo es la siguiente: hay 208 mujeres (50.60%) y 208 hombres (49.40%). En cuanto a la edad, en ambos sexos se observa un grupo de pensionados fuerte en el rango de edades entre 65 y 75 años.
 
 ```{r, message = FALSE, echo=FALSE}
 pensionados_por_tipo <- pensionados %>%
@@ -439,6 +439,9 @@ ggplot(datos_long2, aes(x = COD_TIPO_PENSION, y = Cantidad, fill = Sexo)) +
         legend.title = element_blank())+
   labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del fondo de pensiones."))
 ```
+
+En cuanto al tipo de pensión, se observa que los pensionados por vejez son 236 (57.42%), seguidos por los de sucesión con 110 (26.76%) y, finalmente, los de invalidez con 65 (15.82%). Además, tanto en hombres como en mujeres, se mantiene esta distribución según lo refleja el gráfico. En la población masculina, destacan los pensionados por vejez, con 123 casos, lo que representa el 58.12% de los pensionados por vejez, así como los de sucesión, con 59 casos, lo que equivale al 54.64% de los pensionados por sucesión. La situación es diferente en el caso de las mujeres, donde destacan los pensionados por invalidez, con 34 casos, que constituyen el 52.30% de los pensionados por invalidez.
+
 
 ```{r, message = FALSE, echo=FALSE}
 # Se rellenan datos faltantes para pensionados por vejez
@@ -536,6 +539,8 @@ ggplot(datos_long, aes(x = Antiguedad_intervalo, y = Cantidad, fill = Sexo)) +
         legend.title = element_blank())+
   labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del fondo de pensiones."))
 ```
+
+En lo que respecta a la antigüedad, la media se establece en 5.24 años. En el gráfico se aprecia un grupo considerable de pensionados recientes, la mayoría ubicados entre 1 y 5 años de antigüedad, y otro grupo, en menor cantidad, con una mayor antigüedad. Esta distribución se observa tanto en el sexo femenino como en el masculino.
 
 # Comportamiento de altas y bajas de activos y pensionados
 
