--- a/Informe Demográfico del Régimen/Informe Contexto Demográfico del Régimen.Rmd
+++ b/Informe Demográfico del Régimen/Informe Contexto Demográfico del Régimen.Rmd
@@ -546,6 +546,61 @@ En lo que respecta a la antigüedad, la media se establece en 5.24 años. En el 
 
 ## Activos
 
+```{r, warning=FALSE,message=FALSE, echo=FALSE}
+activos <- read_excel("Fondo C.xlsx", sheet = "Activos", col_names = TRUE)
+activos <- activos[, -c(364, 365)]
+activos <- activos[, -c(2, 3)]
+```
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+altas_bajas <- as.matrix(activos[,2:ncol(activos)] >= 10000, nrow = nrow(activos), ncol = (ncol(activos)-1))
+altas_bajas <- cbind(ID = activos$ID, altas_bajas)
+altas_bajas <- as.data.frame(altas_bajas)
+```
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+nombres_columnas <- names(altas_bajas)[-1]  # Excluir la columna de ID
+años <- sub(".*\\/", "", nombres_columnas)  # Extraer solo el año
+
+# Asignar los años extraídos a las columnas correspondientes
+names(altas_bajas)[-1] <- años
+
+# Transformar de wide a long format
+altas_bajas_long <- pivot_longer(altas_bajas, cols = -ID, names_to = "Año", values_to = "Valor")
+
+# Agrupar por ID y Año, luego resumir para ver si hay algún TRUE en cada año
+altas_bajas_agrupado <- altas_bajas_long %>%
+  group_by(ID, Año) %>%
+  summarize(Valor = any(Valor == TRUE), .groups = 'drop')
+
+conteo_anual <- altas_bajas_agrupado %>%
+  group_by(Año) %>%
+  summarize(
+    altas = sum(Valor == TRUE),
+    bajas = sum(Valor == FALSE)
+  )
+
+conteo_anual$Año <- as.numeric(conteo_anual$Año)
+```
+
+Al analizar las altas y bajas del regimen es importante recalcar que solo se consideran como cotizaciones los salarios mayores o iguales a los diez mil colones además,se debe tener en cuenta que se está trabajando con población cerrada, es decir, no entran nuevas generaciones. Por lo tanto, como se puede observar en el gráfico las altas y bajas de los activos son inversamente proporcionales, cuando aumentan las bajas se tiene una disminición en las altas en la misma proporción y viceversa. 
+
+En 1994, como apenas se inicia el regimen, la mayoría de personas no se encontraban aportando para el regimen, esto se puede ver en el gráfico donde las bajas son superiores a las altas. Sin embargo, conforme van pasando los años las bajas van disminuyendo puesto que, muchos individuos comienzan a hacer aportaciones, aumentando así las altas del regimen. 
+
+En general, desde 1994 hasta 2022 se mantiene una tendencia al aumento de las personas que realizan aportaciones (altas) y la disminución de las que no aportan (bajas). No obstante, en el último año se da una importante reducción en la cantidad de personas que aportan al regimen, lo cual se refleja en un aumento en las bajas. 
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+ggplot(conteo_anual, aes(x = Año)) +
+  geom_line(aes(y = altas, color = "altas")) +
+  geom_line(aes(y = bajas, color = "bajas")) +
+  scale_color_manual(values = c("altas" = "#2F4F4F", "bajas" = "cadetblue3")) +
+  labs(title = "Fondo C. Comportamiento de altas y bajas de los activos.", subtitle = "1994-2023", x = "Fecha", color = "Tipo", y = "Cantidad") +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5),
+        plot.caption = element_text(hjust = 0, color = "black", size = 8)) +
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+```
+
 ## Pensionados 
 ```{r, echo=FALSE, message=FALSE}
 # se extrae  el año de la fecha de inicio de pensión
