--- a/Informe Demográfico del Régimen/Informe-Contexto-Demográfico-del-Régimen.Rmd
+++ b/Informe Demográfico del Régimen/Informe-Contexto-Demográfico-del-Régimen.Rmd
@@ -16,6 +16,7 @@ header-includes:
   - \usepackage[spanish, provide=*]{babel}
   - \usepackage{titling}
   - \usepackage{fontspec}
+  - \usepackage{wrapfig}
   - \setmainfont{Arial}
   - \usepackage{xcolor}
   - \definecolor{azul}{RGB}{49, 126, 153 }
@@ -29,18 +30,18 @@ header-includes:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 \newpage
-
 ```{r, warning=FALSE,message=FALSE, echo=FALSE}
 library(readxl)
 library(tidyr)
 library(dplyr)
 library(ggplot2)
 library(lubridate)
+library(gridExtra)
 ```
 
 #  Análisis general de la Estructura Poblacional del Régimen
 
-El estudio actuarial se llevará a cabo utilizando como base el Fondo C. Su sostenibilidad y eficiencia dependen en gran medida de la composición de la población que contribuye a él. Por ello, es fundamental analizar la composición de dicho fondo a nivel poblacional. En esta sección, nos enfocaremos en estudiar la estructura demográfica de la población que forma parte este régimen. A continuación, se presentará un análisis detallado de la estructura poblacional del fondo. Para llevar a cabo este análisis, se utilizarán datos demográficos relevantes, como la edad, el género y actividad.
+El estudio actuarial se llevará a cabo utilizando como base el Fondo C, la cual contiene datos desde enero de 1994 hasta la fecha de corte situada el 31 de diciembre del 2023. Su sostenibilidad y eficiencia dependen en gran medida de la composición de la población que contribuye a él. Por ello, es fundamental analizar la composición de dicho fondo a nivel poblacional. En esta sección, nos enfocaremos en estudiar la estructura demográfica de la población que forma parte este régimen. A continuación, se presentará un análisis detallado de la estructura poblacional del fondo. Para llevar a cabo este análisis, se utilizarán datos demográficos relevantes, como la edad, el género y actividad.
 
 
 ```{r Estructura de la Poblacion, warning=FALSE,message=FALSE, include=FALSE}
@@ -206,7 +207,7 @@ Graf1 <- rbind(
   ) +
   labs(
     title =
-      "Pirámide Poblacional del Regimen",
+      "Gráfico 1: Pirámide Poblacional del Regimen",
     subtitle =
       "por Edad según el Genero",
     y =
@@ -219,7 +220,7 @@ Graf1 <- rbind(
 ```
 
 
-\begin{wrapfigure}[15]{r}{0.5\textwidth}
+\begin{wrapfigure}[16]{r}{0.5\textwidth}
 
  \centering
 ```{r , fig.align='right', echo=FALSE}
@@ -243,7 +244,7 @@ temp7 <- round(temp6/temp1,2)*100
 Para la fecha de corte de este análisis, se revela que el Fondo presenta una estructura poblacional robusta y activa, con una participación equitativa de género que refleja la diversidad y equilibrio de la sociedad actual. El regimen está compuesto por un total de `r temp1` personas. De ellas, `r temp2` (`r temp3`%) son personas activas, lo que significa que realizaron una contribución al régimen en los últimos 12 meses. Además, hay `r temp4` pensionados (`r temp5`%) y los restantes `r temp6` (`r temp7`%) están inactivos. En el caso del genero se encuentra muy equilibrado siendo que el 51% es femenino y el 49% masculino  y sin mucha variabilidad si se segrega de forma similar a lo anterior. Todo esto permite observar un régimen sostenible que puede apoyar a sus pensionados de manera efectiva. Este equilibrio entre personas activas y pensionados es crucial para la viabilidad a largo plazo del fondo.
 
 
-Gracias al gráfico es posible observar la concentración de la población en el rango de edad productiva entre los 20 y 50 años lo cual es también un indicador positivo, ya que sugiere que el fondo puede contar con una base sólida de contribuyentes durante los próximos años. Estos datos son consistentes con los hallazgos del Informe Demográfico Nacional, lo que sugiere que las tendencias observadas en el fondo de pensiones son un reflejo de la dinámica poblacional más amplia del país. En conjunto, estos elementos proporcionan una perspectiva alentadora para la sostenibilidad y el crecimiento continuo del fondo, asegurando que las necesidades de los pensionados actuales y futuros puedan ser atendidas con confianza.
+Gracias al gráfico 1 es posible observar la concentración de la población en el rango de edad productiva entre los 20 y 50 años lo cual es también un indicador positivo, ya que sugiere que el fondo puede contar con una base sólida de contribuyentes durante los próximos años. Estos datos son consistentes con los hallazgos del Informe Demográfico Nacional, lo que sugiere que las tendencias observadas en el fondo de pensiones son un reflejo de la dinámica poblacional más amplia del país. En conjunto, estos elementos proporcionan una perspectiva alentadora para la sostenibilidad y el crecimiento continuo del fondo, asegurando que las necesidades de los pensionados actuales y futuros puedan ser atendidas con confianza.
 
 
 # Población activa y pensionada
@@ -255,8 +256,6 @@ Gracias al gráfico es posible observar la concentración de la población en el
 activos <- read_excel("Fondo C.xlsx", sheet = "Activos")
 activos <- activos[, -c(1, (ncol(activos)-1):ncol(activos))]
 ```
-
-Al 31 de diciembre de 2023 hay un total de 3.758 de cotizantes activos del fondo de pensiones, cuya distribución por sexo es la siguiente: 1.907 mujeres (50,75%) y 1.851 hombres (49,25%). 
 
 ```{r, message = FALSE, echo=FALSE}
 activos_filtrados <- activos %>%
@@ -281,10 +280,10 @@ piramide2 <- activos_filtrados %>%
   ungroup()
 
 # Graficar la pirámide poblacional
-ggplot(piramide2, aes(x = Edad_intervalo, y = ifelse(Sexo == "M", -Count, Count), fill = Sexo)) +
+Graf2 <- ggplot(piramide2, aes(x = Edad_intervalo, y = ifelse(Sexo == "M", -Count, Count), fill = Sexo)) +
   geom_bar(stat = "identity") +
   scale_y_continuous(labels = abs) +
-  labs(title = "Pirámide Poblacional de Activos",
+  labs(title = "Gráfico 2: Pirámide Poblacional \n de Activos",
        subtitle = "2023",
        x = "Edad",
        y = "Activos",
@@ -298,10 +297,12 @@ ggplot(piramide2, aes(x = Edad_intervalo, y = ifelse(Sexo == "M", -Count, Count)
   coord_flip()+
   scale_fill_manual(values = c( "cadetblue3","#2F4F4F"),
                     labels = c( "Mujeres","Hombres"))+
-  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del fondo de pensiones."))
+  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos \n del Fondo C."))
 ```
 
-De acuerdo con los datos proporcionados, los cotizantes abarcan un rango de edades entre los 20 y los 78 años, con una edad promedio de 43.07 años. El gráfico muestra la distribución por edad y sexo de los cotizantes activos, destacándose una notable concentración entre los 40 y 50 años en ambos géneros.
+Al 31 de diciembre de 2023 hay un total de 3.758 de cotizantes activos del fondo de pensiones, cuya distribución por sexo es la siguiente: 1.907 mujeres (50,75%) y 1.851 hombres (49,25%). 
+
+De acuerdo con los datos proporcionados, los cotizantes abarcan un rango de edades entre los 20 y los 78 años, con una edad promedio de 43.07 años. El gráfico 2 muestra la distribución por edad y sexo de los cotizantes activos, destacándose una notable concentración entre los 40 y 50 años en ambos géneros.
 
 
 ```{r, message = FALSE, echo=FALSE}
@@ -337,9 +338,9 @@ activos_combined <- activos_filtrados %>%
 datos_long <- tidyr::pivot_longer(activos_combined, cols = c(F, M), names_to = "Sexo", values_to = "Cantidad")
 
 # Crear el gráfico
-ggplot(datos_long, aes(x = Antiguedad_Interva, y = Cantidad, fill = Sexo)) +
+Graf3 <- ggplot(datos_long, aes(x = Antiguedad_Interva, y = Cantidad, fill = Sexo)) +
   geom_bar(stat = "identity", position = "dodge") +
-  labs(title = "Distribución de la Antigüedad de Activos",
+  labs(title = "Gráfico 3: Distribución de la \n Antigüedad de Activos",
        subtitle = "2023",
        x = "Antigüedad (años)",
        y = "Cantidad",
@@ -351,10 +352,28 @@ ggplot(datos_long, aes(x = Antiguedad_Interva, y = Cantidad, fill = Sexo)) +
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank())+
-  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del fondo de pensiones."))
+  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos \n del Fondo C."))
 ```
 
-En cuanto a la antigüedad, la media se sitúa en 12.54 años. En el gráfico se representa la distribución por rango de edad y sexo, evidenciando un grupo notablemente longevo de cotizantes en ambos géneros. La mayoría de ellos tienen entre 10 y 20 años de antigüedad, seguidos por aquellos con 5 a 10 años, y los que superan los 20 años de antigüedad.
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.width=6, fig.height=4}
+grid.arrange(Graf2, Graf3, ncol = 2)
+```
+
+En cuanto a la antigüedad, la media se sitúa en 12.54 años. En el gráfico 3 se representa la distribución por rango de edad y sexo, evidenciando un grupo notablemente longevo de cotizantes en ambos géneros. La mayoría de ellos tienen entre 10 y 20 años de antigüedad, seguidos por aquellos con 5 a 10 años, y los que superan los 20 años de antigüedad.
+
+## Pensionados
+
+La segunda población de interés es la población de pensionados (beneficiarios) en curso de pago al 31 de diciembre de 2023 de la cual interesa su distribución por edad, sexo, tipo de pensión y antigüedad.
+
+Es importante aclarar que algunos pensionados por vejez no cuentan con fecha de 
+inicio del pago de la pensión. Por lo cual, se asignó a estos la edad promedio
+de adquisión de la pensión por sexo y el tipo del pensión (vejez), donde para 
+mujeres es de 64.12467 y para hombres es de 64.27295. Además, como fecha de
+inicio en que rige la pensión, se toma la diferencia entre el nacimiento del individuo 
+y la edad a la que se pensiona en formato año/mes/día.
+
+El siguiente gráfico muestra una distribución de los 411 beneficiarios en curso de pago al 31 de diciembre de 2023, por edad según sexo.
 
 ```{r, message = FALSE, echo=FALSE}
 # se cargan los datos de interés
@@ -380,10 +399,10 @@ piramide <- pensionados %>%
   ungroup()
 
 # Graficar la pirámide poblacional
-ggplot(piramide, aes(x = Edad_intervalo, y = ifelse(SEXO == "M", -Count, Count), fill = SEXO)) +
+Graf4 <- ggplot(piramide, aes(x = Edad_intervalo, y = ifelse(SEXO == "M", -Count, Count), fill = SEXO)) +
   geom_bar(stat = "identity") +
   scale_y_continuous(labels = abs) +
-  labs(title = "Pirámide Poblacional de Pensionados",
+  labs(title = "Gráfico 4: Pirámide Poblacional de Pensionados",
        subtitle = "2023",
        x = "Edad",
        y = "Pensionados",
@@ -400,6 +419,16 @@ ggplot(piramide, aes(x = Edad_intervalo, y = ifelse(SEXO == "M", -Count, Count),
   labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del fondo de pensiones."))
 ```
 
+\begin{wrapfigure}[9]{r}{0.5\textwidth}
+
+ \centering
+```{r , fig.align='right', echo=FALSE}
+Graf4
+```
+ 
+\end{wrapfigure}
+
+La distribución por sexo es la siguiente: hay 208 mujeres (50.60%) y 208 hombres (49.40%). En cuanto a la edad, en ambos sexos se observa un grupo de pensionados fuerte en el rango de edades entre 65 y 75 años.
 
 ```{r, message = FALSE, echo=FALSE}
 pensionados_por_tipo <- pensionados %>%
@@ -409,9 +438,9 @@ pensionados_por_tipo <- pensionados %>%
 
 datos_long2 <- tidyr::pivot_longer(pensionados_por_tipo, cols = c(F, M), names_to = "Sexo", values_to = "Cantidad")
 
-ggplot(datos_long2, aes(x = COD_TIPO_PENSION, y = Cantidad, fill = Sexo)) +
+Graf5 <- ggplot(datos_long2, aes(x = COD_TIPO_PENSION, y = Cantidad, fill = Sexo)) +
   geom_bar(stat = "identity", position = "dodge") +
-  labs(title = "Distribución de los Tipos de Pension",
+  labs(title = "Gráfico 5: Distribución de los \n Tipos de Pension",
        subtitle = "2023",
        x = "Tipos de Pensión",
        y = "Cantidad",
@@ -423,8 +452,11 @@ ggplot(datos_long2, aes(x = COD_TIPO_PENSION, y = Cantidad, fill = Sexo)) +
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank())+
-  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del fondo de pensiones."))
+  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos \n del Fondo C."))
 ```
+
+En cuanto al tipo de pensión, se observa que los pensionados por vejez son 236 (57.42%), seguidos por los de sucesión con 110 (26.76%) y, finalmente, los de invalidez con 65 (15.82%). Además, tanto en hombres como en mujeres, se mantiene esta distribución según lo refleja el gráfico 5. En la población masculina, destacan los pensionados por vejez, con 123 casos, lo que representa el 58.12% de los pensionados por vejez, así como los de sucesión, con 59 casos, lo que equivale al 54.64% de los pensionados por sucesión. La situación es diferente en el caso de las mujeres, donde destacan los pensionados por invalidez, con 34 casos, que constituyen el 52.30% de los pensionados por invalidez.
+
 
 ```{r, message = FALSE, echo=FALSE}
 # Se rellenan datos faltantes para pensionados por vejez
@@ -506,9 +538,9 @@ pensionados_combined <- pensionados %>%
 datos_long <- tidyr::pivot_longer(pensionados_combined, cols = c(F, M), names_to = "Sexo", values_to = "Cantidad")
 
 # Crear el gráfico
-ggplot(datos_long, aes(x = Antiguedad_intervalo, y = Cantidad, fill = Sexo)) +
+Graf6 <- ggplot(datos_long, aes(x = Antiguedad_intervalo, y = Cantidad, fill = Sexo)) +
   geom_bar(stat = "identity", position = "dodge") +
-  labs(title = "Distribución de la Antigüedad de Pensionados",
+  labs(title = "Gráfico 6: Distribución de la \n Antigüedad de Pensionados",
        subtitle = "2023",
        x = "Antigüedad (años)",
        y = "Cantidad",
@@ -520,12 +552,82 @@ ggplot(datos_long, aes(x = Antiguedad_intervalo, y = Cantidad, fill = Sexo)) +
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank())+
-  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del fondo de pensiones."))
+  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del \n fondo de pensiones."))
 ```
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE,fig.width=6, fig.height=4}
+grid.arrange(Graf5, Graf6, ncol = 2)
+```
+
+En lo que respecta a la antigüedad, la media se establece en 5.24 años. En el gráfico 6 se aprecia un grupo considerable de pensionados recientes, la mayoría ubicados entre 1 y 5 años de antigüedad, y otro grupo, en menor cantidad, con una mayor antigüedad. Esta distribución se observa tanto en el sexo femenino como en el masculino.
 
 # Comportamiento de altas y bajas de activos y pensionados
 
 ## Activos
+
+```{r, warning=FALSE,message=FALSE, echo=FALSE}
+activos <- read_excel("Fondo C.xlsx", sheet = "Activos", col_names = TRUE)
+activos <- activos[, -c(364, 365)]
+activos <- activos[, -c(2, 3)]
+```
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+altas_bajas <- as.matrix(activos[,2:ncol(activos)] >= 10000, nrow = nrow(activos), ncol = (ncol(activos)-1))
+altas_bajas <- cbind(ID = activos$ID, altas_bajas)
+altas_bajas <- as.data.frame(altas_bajas)
+```
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+nombres_columnas <- names(altas_bajas)[-1]  # Excluir la columna de ID
+años <- sub(".*\\/", "", nombres_columnas)  # Extraer solo el año
+
+# Asignar los años extraídos a las columnas correspondientes
+names(altas_bajas)[-1] <- años
+
+# Transformar de wide a long format
+altas_bajas_long <- pivot_longer(altas_bajas, cols = -ID, names_to = "Año", values_to = "Valor")
+
+# Agrupar por ID y Año, luego resumir para ver si hay algún TRUE en cada año
+altas_bajas_agrupado <- altas_bajas_long %>%
+  group_by(ID, Año) %>%
+  summarize(Valor = any(Valor == TRUE), .groups = 'drop')
+
+conteo_anual <- altas_bajas_agrupado %>%
+  group_by(Año) %>%
+  summarize(
+    altas = sum(Valor == TRUE),
+    bajas = sum(Valor == FALSE)
+  )
+
+conteo_anual$Año <- as.numeric(conteo_anual$Año)
+```
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+Graf7 <- ggplot(conteo_anual, aes(x = Año)) +
+  geom_line(aes(y = altas, color = "altas")) +
+  geom_line(aes(y = bajas, color = "bajas")) +
+  scale_color_manual(values = c("altas" = "#2F4F4F", "bajas" = "cadetblue3")) +
+  labs(title = "Gráfico 7: Comportamiento de altas y bajas de los activos.", subtitle = "1994-2023", x = "Fecha", color = "Tipo", y = "Cantidad") +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5),
+        plot.subtitle = element_text(hjust = 0.5),
+        plot.caption = element_text(hjust = 0, color = "black", size = 8)) +
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
+```
+
+\begin{wrapfigure}[12]{r}{0.5\textwidth}
+
+ \centering
+ 
+```{r , fig.align='right', echo=FALSE}
+ Graf7
+```
+\end{wrapfigure}
+
+Al analizar las altas y bajas del regimen es importante recalcar que solo se consideran como cotizaciones los salarios mayores o iguales a los diez mil colones además,se debe tener en cuenta que se está trabajando con población cerrada, es decir, no entran nuevas generaciones. Por lo tanto, como se puede observar en el gráfico 7 las altas y bajas de los activos son inversamente proporcionales, cuando aumentan las bajas se tiene una disminición en las altas en la misma proporción y viceversa. 
+
+En 1994, como apenas se inicia el regimen, la mayoría de personas no se encontraban aportando para el regimen, esto se puede ver en el gráfico 7 donde las bajas son superiores a las altas. Sin embargo, conforme van pasando los años las bajas van disminuyendo puesto que, muchos individuos comienzan a hacer aportaciones, aumentando así las altas del regimen. 
+
+En general, desde 1994 hasta 2022 se mantiene una tendencia al aumento de las personas que realizan aportaciones (altas) y la disminución de las que no aportan (bajas). No obstante, en el último año se da una importante reducción en la cantidad de personas que aportan al regimen, lo cual se refleja en un aumento en las bajas. 
 
 ## Pensionados 
 ```{r, echo=FALSE, message=FALSE}
@@ -547,12 +649,12 @@ periodo que abarca desde el 2001 al 2023.
 Además, dado que el fondo no cuenta con la fecha de salida de los pensionados, no se 
 analizarán las bajas.
 
-En el gráfico #, se muestra el comportamiento de las entradas de pensionados.
+En el gráfico 8, se muestra el comportamiento de las entradas de pensionados.
 
 ```{r, warning=FALSE, echo=FALSE}
-  ggplot(conteo, aes(x = as.numeric(año), y = cantidad_personas, color = COD_TIPO_PENSION)) +
+Graf8 <-  ggplot(conteo, aes(x = as.numeric(año), y = cantidad_personas, color = COD_TIPO_PENSION)) +
   geom_line() +
-  labs(title = " Gráfico #: Entradas de pensionados por año del Régimen",
+  labs(title = " Gráfico 8: Entradas de pensionados por año del Régimen",
        subtitle = "2001-2023",x = " Año de inicio de pago de la pensión",
        y = "Cantidad de personas pensionadas", color = "Tipo de pensión")+
   scale_color_manual(values = c("#2F4F4F", "cadetblue3", "#BCEE68"))+
@@ -565,6 +667,15 @@ En el gráfico #, se muestra el comportamiento de las entradas de pensionados.
   labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C"))
 
 ```
+
+\begin{wrapfigure}[15]{r}{0.5\textwidth}
+
+ \centering
+ 
+```{r , fig.align='right', echo=FALSE}
+ Graf8
+```
+\end{wrapfigure}
 
 Es posible observar que para el caso de los pensionados por invalidez,
 las entradas entre el 2001 y el 2014 son similares, están rondando entre 1 y 3 
@@ -590,5 +701,3 @@ En síntesis, se identifica que en el periodo de estudio, el mayor crecimiento d
 pensionados son percibidos por las pensiones por vejez, seguido de las pensiones
 por sucesión y por último, las de invalidez. Las tres mostraron una tendencia a
 la alta pero bajaron en el 2023.
-
-
